timer_set_frequency and timer_get_conf

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "lcf.h": "c",
-        "stdint.h": "c"
+        "stdint.h": "c",
+        "random": "c"
     }
 }
