More timer.c & lab2.c functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "lcf.h": "c",
         "stdint.h": "c",
-        "random": "c"
+        "random": "c",
+        "__locale": "c",
+        "timer.h": "c"
     }
 }
