Lab 2 e 3 refeitos para estudar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
         "__locale": "c",
         "timer.h": "c",
         "lab3.h": "c",
-        "i8254.h": "c"
+        "i8254.h": "c",
+        "locale": "c",
+        "kbc.h": "c",
+        "i8042.h": "c"
     }
 }
