Start of lab5 with the first function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "__locale": "c",
         "timer.h": "c",
         "lab3.h": "c",
-        "i8254.h": "c"
+        "i8254.h": "c",
+        "LAB5.C": "cpp"
     }
 }
