--- a/lab5/Makefile
+++ b/lab5/Makefile
@@ -2,15 +2,16 @@
 PROG=lab5
 
 # source code files to be compiled
-SRCS = lab5.c timer.c utils.c video.c kbc.c keyboard.c
+SRCS = lab5.c video.c keyboard.c kbc.c
 
 # additional compilation flags
 # "-Wall -Wextra -Werror -I . -std=c11 -Wno-unused-parameter" are already set
-CFLAGS += -pedantic
+CPPFLAGS += -pedantic -DLAB4
 
-# list of library dependencies (for Lab 5, only LCF library)
+# list of library dependencies (for Lab 2, only LCF library)
 DPADD += ${LIBLCF}
 LDADD += -llcf
+CPPFLAGS += -D LAB
 
 # include LCOM's makefile that does all the "heavy lifting"
 .include <minix.lcom.mk> 
