--- a/proj/src/Makefile
+++ b/proj/src/Makefile
@@ -1,9 +1,10 @@
 # name of the program (Minix service)
 PROG=proj
 
-# source code files to be compiled
-SRCS = proj.c
+.PATH : ${.CURDIR}/game ${.CURDIR}/utils/keyboardMouse ${.CURDIR}/utils/timer ${.CURDIR}/utils/video ${.CURDIR}/utils ${.CURDIR}/sprites
 
+# source code files to be compiled
+SRCS = proj.c 
 # additional compilation flags
 # "-Wall -Wextra -Werror -I . -std=c11 -Wno-unused-parameter" are already set
 CPPFLAGS += -pedantic -DPROJ
