Print sprites but not yet right

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "*.tcc": "c",
         "__tree": "c",
         "map": "c",
-        "*.xpm": "c"
+        "*.xpm": "c",
+        "menu.h": "c"
     }
 }
