Asteroids and collisions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "__tree": "c",
         "map": "c",
         "*.xpm": "c",
-        "menu.h": "c"
+        "menu.h": "c",
+        "game_controller.h": "c"
     }
 }
